--- a/introduction.qmd
+++ b/introduction.qmd
@@ -10,53 +10,84 @@ format:
 number-sections: true
 code-line-numbers: false
 code-copy: true
+toc: true
+toc-depth: 1
+code-overflow: wrap
 ---
 
 # What is Git?
 
-Introduction to GitHub for collaborative projects
+:::: {.columns}
 
-![](WS-slides/media/image28.png){fig-align="center"}
+
+::: {.column width="70%"}
+> **Linus Torvalds: (creator)**
+> 
+> *"git" can mean anything, depending on your mood.*
+> 
+> - *random three-letter combination that is pronounceable, and not actually used by any common UNIX command*
+> - *stupid. contemptible and despicable. simple.*
+> - *"global information tracker"*
+> - *"goddamn idiotic truckload of sh\*t"*
+
+:::
+
+::: {.column width="30%"}
+![](https://logowik.com/content/uploads/images/git6963.jpg){fig-align="center"}
+:::
+
+::::
+
+:::{.footer}
+Image source: logowik.com
+:::
 
 # Why use Git?
 
 ![](WS-slides/media/image46.png){fig-align="center"}
 
+:::{.footer}
+Image source: Luis Javier Chueca
+:::
+
 # The key ideas of Git
 
-# GitHub
+# Hosting on GitHub
 
-# Creating an account on GitHub
+## Creating an account on GitHub
 
 1. Navigate to [github.com](https://github.com/)
 2. Click Sign up
 3. Follow the prompts to create your personal account
 
-# Installing Git: Windows
+## Create a repository
+
+
+
+# Installing Git
+
+## Windows
 
 ![](https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Windows_logo_-_2012.svg/1024px-Windows_logo_-_2012.svg.png){fig-align="center"}
 
-## Install
+:::{.footer}
+Image source: wikimedia.org
+:::
+
+### Install
 
 1. Download the latest version for [Windows installer](https://gitforwindows.org/)
 2. Follow the instructions as provided in the Git Setup wizard screen
 
 ![](https://peateasea.de/assets/images/git_setup_wizard_window.png){fig-align="center"}
 
-## Verify it worked
+:::{.footer}
+peateasea.de
+:::
+
+### Verify it worked
 
 3. Open Windows command prompt (or Git Bash if you selected not to use the standard Git Windows Command Prompt during the Git installation).
-
-  <!-- These are my recomendations, but please, feel free to explore and consider all options:
-    - Use bundled OpenSSH
-    - Use the OpenSSL library
-    - Checkout Windows-style, commit Unix-style line endings
-    - Use MinTTY (the default terminal of MSYS2)
-    - Fast-forward or merge
-    - Git Credential Manager
-    - Enable file system caching
-    - Override the default branch name for new repositories
-    - Git from the command line and also from 3rd-party software -->
   
 4. Type:
 
@@ -70,7 +101,7 @@ which should return something like:
 git version 2.34.1
 ```
 
-## Configure
+### Configure
 
 5. Configure Git username and email using the following commands, replacing Mark's name with your own:
 
@@ -83,11 +114,15 @@ git config --global user.email "mark.zuckerberg@facebook.com"
 These details will be associated with any commits that you create
 :::
 
-# Install Git on Mac OS X
+## Install Git on Mac OS
 
 ![](https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Apple_logo_black.svg/814px-Apple_logo_black.svg.png){fig-align="center"}
 
-## Install
+:::{.footer}
+Image source: wikimedia.org
+:::
+
+### Install
 
 1. Open your terminal and install Git using Homebrew:
 
@@ -95,7 +130,7 @@ These details will be associated with any commits that you create
 brew install git
 ```
 
-## Verify it worked
+### Verify it worked
 
 2. Verify the installation was successful by typing:
 
@@ -103,7 +138,7 @@ brew install git
 git --version
 ```
 
-## Configure
+### Configure
 
 3. Configure your Git username and email using the following commands, replacing Mark's name with your own. These details will be associated with any commits that you create:
 
@@ -126,11 +161,16 @@ Which should return: `/opt/local/bin/port`
 sudo port install git
 ```
 
-# Install Git on Linux/WSL: Debian / Ubuntu
+## Install Git on Linux/WSL: Debian / Ubuntu
 
 ![](https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/1727px-Tux.svg.png){fig-align="center"}
 
-## Install
+
+:::{.footer}
+Image source: wikimedia.org
+:::
+
+### Install
 
 1. From your terminal, install Git using `apt-get`:
   
@@ -139,7 +179,7 @@ sudo apt-get update
 sudo apt-get install git
 ```
 
-## Verify it worked
+### Verify it worked
 
 2. Verify the installation was successful by typing:
 
@@ -147,7 +187,7 @@ sudo apt-get install git
 git --version
 ```
 
-## Configure
+### Configure
 
 3. Configure your Git username and email using the following commands, replacing Mark's name with your own. These details will be associated with any commits that you create:
 
@@ -181,7 +221,10 @@ On RStudio:
   - Paste `URL` and insert `Project directory name`
   - `Create Project`
 
-# Creating a new R project
+# Git with R
 
 ![](https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/R_logo.svg/991px-R_logo.svg.png){fig-align="center"}
 
+:::{.footer}
+Image source: wikimedia.org
+:::
