--- a/presentation.qmd
+++ b/presentation.qmd
@@ -1,7 +1,7 @@
----
-title: "presentation"
----
+{{< include introduction.qmd >}}
 
-## Quarto
+{{< include github.qmd >}}
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
+{{< include installation.qmd >}}
+
+{{< include key-commands.qmd >}}
