--- a/installation.qmd
+++ b/installation.qmd
@@ -1,6 +1,6 @@
 # Installing Git
 
-## Install Git on Windows ![](https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Windows_logo_-_2012.svg/1024px-Windows_logo_-_2012.svg.png){.center}
+## Install Git on Windows ![](https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Windows_logo_-_2012.svg/1024px-Windows_logo_-_2012.svg.png){.inline}
 
 :::{.center-y}
 
@@ -20,7 +20,7 @@
 Image source: wikimedia.org
 :::
 
-## Install Git on Mac OS ![](https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Apple_logo_white.svg/1724px-Apple_logo_white.svg.png){.center}
+## Install Git on Mac OS ![](https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Apple_logo_white.svg/1724px-Apple_logo_white.svg.png){.inline}
 
 :::{.center-y}
 
@@ -39,7 +39,7 @@ Image source: wikimedia.org
 Image source: wikimedia.org
 :::
 
-## Install Git on Linux/WSL: Debian / Ubuntu ![](https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/1727px-Tux.svg.png){.center}
+## Install Git on Linux/WSL: Debian / Ubuntu ![](https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/1727px-Tux.svg.png){.inline}
 
 :::{.center-y}
 
