--- a/terminology.qmd
+++ b/terminology.qmd
@@ -1,5 +1,9 @@
 # Terminology
 
+## General concepts
+
+::: {.center-y}
+
 **Version control**: the system
 
 **Git**: a program
@@ -7,3 +11,5 @@
 **GitHub**: a website
 
 **Repository**: a folder
+
+:::
