--- a/github.qmd
+++ b/github.qmd
@@ -2,9 +2,13 @@
 
 ## Creating an account on GitHub
 
+::: {.center-y}
+
 1. Navigate to [github.com](https://github.com/)
 2. Click Sign up
 3. Follow the prompts to create your personal account
+
+:::
 
 ## Create a repository
 
