--- a/key-commands.qmd
+++ b/key-commands.qmd
@@ -1,34 +1,8 @@
-# Basic commands for git usage:
-
-::: {.columns}
-
-::: {.column}
-**Essential**
-
-1. `git clone`
-2. `git add`
-3. `git commit`
-4. `git push`
-5. `git pull`
-:::
-
-::: {.column}
-**Good**
-
-6. `git rm` and `git rm --cached`
-7. `git branch`
-8. `git request-pull`
-9. `git merge` 
-10. `git status`
-11. `git clean`
-12. `git stash` and `git stash apply`
-:::
-
-:::
-
-[Git Cheat Sheet](https://education.github.com/git-cheat-sheet-education.pdf)
+# Basic commands for git usage
 
 ## Essentials
+
+::: {.center-y}
 
 1. `git clone`: get a remote repository and put it on your machine
 2. `git add`: add a file to version control
@@ -36,23 +10,37 @@
 4. `git push`: send your changes to the remote repository
 5. `git pull`: get remote changes to the repository
 
+:::
+
 ## Good to know
 
-6. `git rm` and `git rm --cached`: remove files entirely or just from version control
-7. `git branch`: create a separate branch of the repository to work on a new idea
-8. `git request-pull`: add your changes to the remote repository the nice way 
-9. `git merge`: add your changes to the remote repository the hard way
-10. `git status`: see what's happening locally
-11. `git clean`: remove any files that aren't under version control
-12. `git stash` and `git stash apply`: temporarily put your changes to one side to resolve version control issues and then re-apply them once it's sorted
+::: {.center-y}
 
-# `request-pull` vs `merge`
+1. `git rm` and `git rm --cached`: remove files entirely or just from version control
+2. `git branch`: create a separate branch of the repository to work on a new idea
+3. `git request-pull`: add your changes to the remote repository the nice way 
+4. `git merge`: add your changes to the remote repository the hard way
+5.  `git status`: see what's happening locally
+6.  `git clean`: remove any files that aren't under version control
+7.  `git stash` and `git stash apply`: temporarily put your changes to one side to resolve version control issues and then re-apply them once it's sorted
+
+[Git Cheat Sheet](https://education.github.com/git-cheat-sheet-education.pdf)
+
+:::
+
+# Tips
+
+## `request-pull` vs `merge`
+
+:::{.center-y}
 
 "Hey guys! Please look at this, see whether it looks good, and confirm the request if it is"
 
 "Hey guys! Here is my code, whether you like it or not"
 
-# Terminal vs UI
+:::
+
+## Terminal vs UI
 
 :::{.center-y}
 
